--- a/loket-upgrade/css/screen-eforms.css
+++ b/loket-upgrade/css/screen-eforms.css
@@ -1811,6 +1811,7 @@ footer .social .instagram {
     background-color: #CC0000;
     height: 100%;
     width: 100%;
+    overflow-y: auto;
   }
   .touch-js .container {
     margin-right: -1em;
@@ -2217,7 +2218,7 @@ footer .social .instagram {
     padding: 0 1.2em 2em 0.8em;
   }
   #main .containerTop {
-    padding-block-start: 5.2em !important;
+    padding-block-start: 5.3em !important;
   }
 
   .container {
