--- a/loket-upgrade/css/screen-ie.css
+++ b/loket-upgrade/css/screen-ie.css
@@ -1747,7 +1747,7 @@ nav.mainMenu li {
   padding: 0 1.2em 2em 0.8em;
 }
 #main .containerTop {
-  padding-block-start: 5.2em !important;
+  padding-block-start: 5.3em !important;
 }
 
 .container {
