--- a/loket-upgrade/css/screen.css
+++ b/loket-upgrade/css/screen.css
@@ -1650,6 +1650,7 @@ footer .social .instagram {
     background-color: #CC0000;
     height: 100%;
     width: 100%;
+    overflow-y: auto;
   }
   .touch-js .container {
     margin-right: -1em;
@@ -2063,7 +2064,7 @@ header .twocolumngroup-col2 > div {
     padding: 0 1.2em 2em 0.8em;
   }
   #main .containerTop {
-    padding-block-start: 5.2em !important;
+    padding-block-start: 5.3em !important;
   }
 
   .container {
