--- a/loket-upgrade/sass/partials/_tweakpoint-4.scss
+++ b/loket-upgrade/sass/partials/_tweakpoint-4.scss
@@ -67,7 +67,7 @@ nav.mainMenu{
 
  .containerTop
 	{
-		padding-block-start: 5.2em !important; 
+		padding-block-start: 5.3em !important; 
 	}
 }
 
