--- a/loket-upgrade/sass/partials/_tweakpoint-menu-search-1.scss
+++ b/loket-upgrade/sass/partials/_tweakpoint-menu-search-1.scss
@@ -68,6 +68,7 @@
 	//iphone fix
 	height: 100%;
 	width: 100%;
+	overflow-y:auto;
 	
 	.container
 	{
